--- a/template/person.html
+++ b/template/person.html
@@ -3,13 +3,13 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="angular.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script>
     var popitPersonApp = angular.module('popitPerson', []);
-    popitPersonApp.controller('popitPersonController', function($scope){
+    popitPersonApp.controller('popitPersonController', function($scope, $http){
         $scope.person = {
               "id": "john-q-public",
               "name": "Mr. John Q. Public, Esq.",
@@ -91,9 +91,18 @@
         };
 
         $scope.remove_url = function(idx){
-            console.log(idx);
             $scope.person.links.splice(idx, 1);
         };
+
+        $scope.create_person = function(){
+            var res = $http.post("/person", $scope.person);
+            res.success(function(data, status, header, config){
+                console.log("OK")
+            });
+            res.error(function(data, status, header, config){
+                console.log("Oh OH")
+            });
+        }
     });
 
 </script>
@@ -140,6 +149,7 @@
                     <th>End Data</th>
                     <th>Note</th>
                 </tr>
+                {% raw %}
                 <tr ng-repeat="alternative_name in person.other_names">
                     <td>{{alternative_name.name}}</td>
                     <td>{{alternative_name.start_date}}</td>
@@ -147,6 +157,7 @@
                     <td>{{alternative_name.note}}</td>
                     <td><button id="remove_altenative_name" class="btn btn-danger" ng-click="remove_alternative_name($index)">Delete</button></td>
                 </tr>
+                {%  endraw %}
             </table>
             <div class="form-group">
                 <label for="email">Email</label>
@@ -195,14 +206,18 @@
                     <th>URL</th>
                     <th>Note</th>
                 </tr>
+                {% raw %}
                 <tr ng-repeat="links in person.links">
                     <td>{{links.url}}</td>
                     <td>{{links.note}}</td>
                     <td><button id="remove_link" class="btn btn-danger" ng-click="remove_url($index)">Delete</button></td>
                 </tr>
+                {% endraw %}
             </table>
             <!-- Memberships are not created now. First ensure user exist?-->
-
+            <div class="form-group">
+                <button class="btn" ng-click="create_person()">Submit</button>
+            </div>
 		</form>
 
 	</div>
