--- a/template/person.html
+++ b/template/person.html
@@ -11,47 +11,27 @@
     var popitPersonApp = angular.module('popitPerson', []);
     popitPersonApp.controller('popitPersonController', function($scope, $http){
         $scope.person = {
-              "id": "john-q-public",
-              "name": "Mr. John Q. Public, Esq.",
+              "id": "",
+              "name": "",
               "other_names": [
-                {
-                  "name": "Mr. Ziggy Q. Public, Esq.",
-                  "start_date": "1920-01",
-                  "end_date": "1949-12-31",
-                  "note": "Birth name"
-                },
-                {
-                  "name": "Dragonsbane",
-                  "note": "LARP character name"
-                }
+
               ],
               "identifiers": [
-                {
-                  "identifier": "046454286",
-                  "scheme": "SIN"
-                }
+
               ],
-              "email": "jqpublic@xyz.example.com",
-              "gender": "male",
-              "birth_date": "1920-01",
-              "death_date": "2010-01-01",
-              "image": "http://example.com/pub/photos/jqpublic.gif",
-              "summary": "A hypothetical member of society deemed a 'common man'",
-              "biography": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...",
-              "national_identity": "Scottish",
+              "email": "",
+              "gender": "",
+              "birth_date": "",
+              "death_date": "",
+              "image": "",
+              "summary": "",
+              "biography": "",
+              "national_identity": "",
               "contact_details": [
-                {
-                  "type": "cell",
-                  "label": "Mobile number",
-                  "value": "+1-555-555-0100",
-                  "note": "Free evenings and weekends"
-                }
+
               ],
               "links": [
-                {
-                  "url": "http://en.wikipedia.org/wiki/John_Q._Public",
-                  "note": "Wikipedia page"
-                }
+
               ]
             };
         // TODO: this is fucking ugly
