Hack second form to allow autocomplete to work, a bit of hit and miss

--- a/posthack/templates/post_memberships.html
+++ b/posthack/templates/post_memberships.html
@@ -32,7 +32,7 @@
                     return false;
                 }
             })
-            .autocomplete("instance")._renderItem = function(ul, item){
+            .data("uiAutocomplete")._renderItem = function(ul, item){
                 return $("<li>")
                         .append("<a>"+item.name+"</a>")
                         .appendTo(ul);
@@ -63,15 +63,16 @@
                     $("#post_name").val(ui.item.label);
                     $("#post_id").val(ui.item.id);
                     return false;
+                },
+                _renderItem : function(ul, item){
+                    console.log("bam");
+                    console.log(item.label);
+                    return $("<li>")
+                            .append("<a>"+item.label+"</a>")
+                            .appendTo(ul);
                 }
-            })
-            .autocomplete("instance")._renderItem = function(ul, item){
-                console.log("bam");
-                console.log(item.label);
-                return $("<li>")
-                        .append("<a>"+item.label+"</a>")
-                        .appendTo(ul);
-            };
+
+            });
         });
     </script>
 </head>
