Fix bug on posting membership

--- a/posthack/templates/post_memberships.html
+++ b/posthack/templates/post_memberships.html
@@ -83,7 +83,7 @@
     <label for="person_name">Person Name</label><input type="text" id="person_name" name="person_name"/><br/>
     <input type="hidden" id="person_id" name="person_id"/>
     <label for="post_name">post Name</label><input type="text" id="post_name" name="post_name"><br/>
-    <input type="hidden" id="post_id" name="person_id">
+    <input type="hidden" id="post_id" name="post_id">
     <!--
     <label for="person_id">Person</label><select id="person_id" name="person_id">
         {% for person in persons %}
