--- a/posthack/templates/glue.html
+++ b/posthack/templates/glue.html
@@ -7,6 +7,7 @@
 <body>
 <a href="/listorgs/">Select organization to add post</a><br/>
 <a href="/addmembers/552336a1dcde1129132c43a1">Add membership to House of Representative</a><br/>
-<a href="/listpost/">Select post to add members</a><br/>
+<a href="/listpost/">Select post to delete members</a><br/>
+<a href="/mergeperson/">Merge people</a><br/>
 </body>
 </html>
