Switch to search interface

--- a/posthack/templates/glue.html
+++ b/posthack/templates/glue.html
@@ -5,9 +5,9 @@
     <title></title>
 </head>
 <body>
-<a href="/listorgs/">Select organization to add post</a><br/>
+<a href="/addpost">Select organization to add post</a><br/>
 <a href="/addmembers/552336a1dcde1129132c43a1">Add membership to House of Representative</a><br/>
-<a href="/listpost/">Select post to delete members</a><br/>
+<a href="/deletepostmembership">Select post to delete members</a><br/>
 <a href="/mergeperson/">Merge people</a><br/>
 </body>
 </html>
