Implementation of adding area and editting membership

--- a/posthack/templates/addpost.html
+++ b/posthack/templates/addpost.html
@@ -8,7 +8,9 @@
 <form method="post" action="/addpost/{{organization_id}}">
     <label for="name">Name</label><input id="name" type="text" name="name"/><br/>
     <label for="role">Role</label><input id="role" type="text" name="role"/><br/>
-
+    <label for="area_id">Area Id</label><input id="area_id" type="text" name="area_id"/><br/>
+    <label for="area_name">Area Name</label><input id="area_name" type="text" name="area_name"/><br/>
+    <label for="area_state">Area State</label><input id="area_state" type="text" name="area_state"/><br/>
     <label for="start_date">Start Date</label><input id="start_date" type="text" name="start_date"/><br/>
     <label for="end_date">End Date</label><input id="end_date" type="text" name="end_date"/><br/>
     <input type="submit" value="create"/>
