Make output to post json, change link to glue,  make edit membership to edit area

--- a/posthack/templates/edit_memberships.html
+++ b/posthack/templates/edit_memberships.html
@@ -92,7 +92,8 @@
         value="{{ membership['area']['state']}}"><br/>
     <label for="start_date">Start date</label><input type="text" id="start_date" name="start_date" value="{{membership['start_date']}}"/><br/>
     <label for="end_date">End Date</label><input type="text" id="end_date" name="end_date" value="{{membership['end_date']}}"/><br/>
-    <input type="submit"/>
+    <input type="submit" name="save" value="save"/>
+    <input type="submit" name="delete" value="delete"/>
 </form>
 </body>
 </html>
