Add title to search result

--- a/posthack/templates/search_result.html
+++ b/posthack/templates/search_result.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
+    {{ title }}<br/>
     <form action="" method="get">
         <label for="name">Name to search: </label>
         <input type="text" id="name" name="name"/>
