Change list organization not hard code organization ID

--- a/posthack/templates/glue.html
+++ b/posthack/templates/glue.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <a href="/addpost">Select organization to add post</a><br/>
-<a href="/addmembers/552336a1dcde1129132c43a1">Add membership to House of Representative</a><br/>
+<a href="/addmembers/">Add memberships</a><br/>
 <a href="/editpostmembership">Select post to change membership</a><br/>
 <a href="/mergeperson/">Merge people</a><br/>
 </body>
