--- a/posthack/templates/post_memberships.html
+++ b/posthack/templates/post_memberships.html
@@ -77,6 +77,7 @@
     </script>
 </head>
 <body>
+Add membership {{ organization["name"] }}
 <form method="post" action="/addmembers/{{ organizations_id }}">
     <label for="name">Name</label><input type="text" name="name" id="name"/><br/>
     <label for="role">Role</label><input type="text" name="role" id="role"/><br/>
